<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGrey"
    tools:context=".UserDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorDarkGrey"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_voterId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/voter_id"
            android:inputType="number"
            android:textColor="@color/colorDarkGrey"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_name"
            app:layout_constraintStart_toStartOf="@+id/edit_text_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />

        <EditText
            android:id="@+id/edit_text_aadhar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/aadhar_card_number"
            android:inputType="number"
            android:textColor="@color/colorDarkGrey"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_voterId"
            app:layout_constraintStart_toStartOf="@+id/edit_text_voterId"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_voterId" />

        <Button
            android:id="@+id/button_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/montserrat"
            android:text="@string/continue_text"
            android:textColor="@color/colorDarkGrey"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_aadhar"
            app:layout_constraintStart_toStartOf="@+id/edit_text_aadhar"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_aadhar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>